modification du planning

--- a/edla/previsionnel.tex
+++ b/edla/previsionnel.tex
@@ -56,7 +56,7 @@ une scène et de demander à l'utilisateur de les empiler pour fabriquer une pyr
 ce concept, car ce type d'application n'est pas réalisable avec d'autres types d'IHM et que cela demande
 beaucoup de précision.
 
-\begin{figure}
+\begin{figure}[!h]
   \begin{center}
     \includegraphics[width=10cm]{images/exampleHand.png}
     \caption{Exemple d'application rencontrée pour la Leap Motion}
@@ -64,9 +64,9 @@ beaucoup de précision.
   \end{center}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[!h]
   \begin{center}
-    \includegraphics[angle=-90, width=4cm]{images/planning.png}
+    \includegraphics[width=18cm, height=4cm]{images/planning.png}
     \caption{Planning du projet}
     \label{fig:planning}
   \end{center}
