--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -178,6 +178,12 @@ ou une surface de subdivision, on applique une fonction surface pour retrouver l
 Entre chaque opération, on applique une fonction de minimisation d'énergie,
 on obtient alors une convergence des résultats plus rapide qu'en utilisant simplement ICP une fois.
 
+\begin{figure}
+ \center
+ \includegraphics[width=14cm]{images/MethodeModelisation.png}
+ \caption{Résumé des étapes pour la modélisation de la main}
+\end{figure}
+
 \section{Evaluation des solutions envisagées}
 Parmi les solutions que nous avons envisagées dans cet état de l'art, nous avons vu que la solution avec une 
 image couleur pouvait être limitée. Celle-ci nécessite un algorithme permettant de suivre au mieux
