Ajout  de la partie skinning

--- a/edla/biblio.bib
+++ b/edla/biblio.bib
@@ -107,6 +107,18 @@ month={Aug},}
   publisher={Elsevier}
 }
 
+//Skinning
+@inproceedings{baran2007automatic,
+	title={Automatic rigging and animation of 3d characters},
+	author={Baran, Ilya and Popovi{\'c}, Jovan},
+	booktitle={ACM Transactions on Graphics (TOG)},
+	volume={26},
+	number={3},
+	pages={72},
+	year={2007},
+	organization={ACM}
+}
+
 //pour l'algo de kalman
 @INPROCEEDINGS{kalman,
 author={Jie Yang and Waibel, Alex},
