--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -191,11 +191,10 @@ Pour pouvoir animer une main de façon cohérente et réaliste il existe plusieu
 Cependant, dans le cadre d'une animation en temps réel et contrôlé par la main de l'utilisateur, des solutions comme l'animation par clef sont à abandonner.
 
 Nous avons choisi de nous concentrer sur une animation à base d'armature.
-\begin{figure}
-% \center
- \center
- \includegraphics[width=14cm]{images/SkellHand.jpg}
- \caption{Armature de la main droite réalisée sur blender}
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=14cm]{images/SkellHand.jpg}
+	\caption{Armature de la main droite réalisée sur blender}
 \end{figure}
 
 Les armatures permettent de modifier le modèle associé à partir de rotations et translations des jointures de cet armature.
@@ -203,22 +202,32 @@ Il existe de nombreuses méthodes pour réaliser cette modification.
 Celle utilisée majoritairement est d'associer les sommet du modèle aux jointures. Cette association peut être dure : un sommet est associé à une seule jointure, ou floue : un sommet peut être associé à plusieurs jointures par des poids différents.
 
 Un algorithme permettant cette association est "bone heat weighting". \cite{baran2007automatic}
-Il permet de trouver les poids adaptés à l'association entre les os de l'armature et les sommets. IL prend en compte différentes contraintes pour les poids associés : \\
+Il permet de trouver les poids adaptés à l'association entre les os de l'armature et les sommets. Pour rendre un résultat proche du réel, on souhaite que les poids possède certaines propriétés : \\
 \begin{itemize}
-	\item Ils ne doivent pas dépendre de la résolution du mesh
-
-	\item Ils doivent varier de façon homogène avec la surface
-	\item Il doit y avoir un rapport de proportionnalité entre la largeur 
+	\item Ils devraient être indépendants de la résolution du mesh, un sommet situé à un endroit du mesh devrait avoir le même poids quel
+	que soit le nombre de sommet proches.
+	\item Ils devraient varier de façon homogène avec la surface. Les valeurs de poids ne devraient pas varier fortement si la surface est lisse et inversement si elle est inégale.
+	\item Pour éviter des artefacts liés aux plis du modèle, il doit y avoir un rapport de proportionnalité entre la largeur des jointures 
+	et la distance de la jointure au modèle. 
 \end{itemize}
 
 Un modèle qui a fait l'objet de cet algorithme peut être \og animé \fg  de façon réaliste.
 Pour cela, on peut créer des contraintes sur les mouvements possibles de l'armature pour correspondre à des actions possibles. 
 Par exemple, pour la main, les doigts ne peuvent pas bouger librement, on peut donc contraindre les degrés de liberté de chaque jointure et même empécher les translations : toutes les positions de la main pouvant être exprimées par une série de rotation contraintes des jointures du squelette.
 % ATTENTION : à changer si modification de la méthode d'animation
-Une autre solution, celle employée dans notre projet, consiste à n'utiliser que des informations de position obtenue par détection des jointures des doigts de la main \textit{via} un périphérique de capture.
-Dans cette méthode, on associe les points détectés aux jointures de l'armature. Les positions des jointures du modèle sont donc naturellement contraintes par les postions des jointures de la véritable main.
+Une autre solution, celle employée dans notre projet, consiste à n'utiliser que des informations de position obtenue par détection des articulations des doigts de la main \textit{via} un périphérique de capture.
+Dans cette méthode, on associe les points détectés aux jointures de l'armature. Les positions des jointures du modèle sont donc naturellement contraintes par les postions des articulations de la véritable main.
 
-Enfin, il existe une méthode appelée la cinématique inverse qui utilise un point fixe et un point mobile de l'armature. Elle permet de retrouver les rotations effectuées par les jointures pour que le point mobile soit à sa position connue.
+Enfin, il existe une méthode appelée la cinématique inverse qui utilise un point fixe et un point mobile de l'armature. Elle permet de retrouver les rotations effectuées par les jointures pour que le point mobile soit à sa position connue. Pour cela, l'algorithme de cinématique inverse minimise la fonction de distance entre le point mobile de l'armature et la position que ce point doit atteindre.
+La cinématique inverse à besoin de 3 principes pour fonctionner : 
+
+\begin{itemize}
+	\item Les membres sont des solides indéformables de longueur donnée, reliés entre eux par des articulation. Ce principe est respecté par l'armature : les os peuvent être indéformable et leurs tailles peut être fixé, ils sont reliés entre eux par des articulation.
+	\item Les articulations supportent une certaine torsion maximale qui varie selon la direction et la vitesse. Ces deux contraintes peuvent être appliquées aux jointures d'une armature.
+	\item Les mouvements sont supposés suffisamment réguliers pour paraitre naturels. Comme les points mobiles sont obtenus à partir de mouvements d'une main réelle, ils vont nécessairement paraitre naturels.
+\end{itemize}
+
+Cette méthode étant complexe, les calculs nécessaire pour la mettre en place prennent trop de temps pour un système temps réel comme le notre.
 
 
 \section{Evaluation des solutions envisagées}
