--- a/edla/realisation.tex
+++ b/edla/realisation.tex
@@ -60,6 +60,6 @@ Nous avons choisi de ne pas modéliser la main de l'utilisateur, à la place nou
 Nous y avons appliqué une armature pour pouvoir l'animer de façon réaliste. Pour relier l'armature au modèle, on utilise une méthode de skinning.
 
 \paragraph{}
-Les différents techniques d'animation basé sur une armature sont décrites dans l'état de l'art correspondant. Pour notre projet, nous avons choisi la méthode qui utilise les articulations récupérées par la DLL en conjonction avec les points récupérés \textit{via} le SDK de la Kinect. Ces points servent à positionner les jointures de l'armature par translations et/ou rotations.
+Les différentes techniques d'animation basé sur une armature sont décrites dans l'état de l'art correspondant. Pour notre projet, nous avons choisi la méthode qui utilise les articulations récupérées par la DLL en conjonction avec les points récupérés \textit{via} le SDK de la Kinect. Ces points servent à positionner les jointures de l'armature par translations et/ou rotations.
 
 \section{L'application de démonstration}
