--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -200,7 +200,8 @@ Nous avons choisi de nous concentrer sur une animation à base d'armature.\newli
 
 Les armatures permettent de modifier le modèle associé à partir de rotations et translations des jointures de cet armature.
 Il existe de nombreuses méthodes pour réaliser cette modification.
-Celle utilisée majoritairement est d'associer les sommet du modèle aux jointures. Cette association peut être dure : un sommet est associé à une seule jointure, ou floue : un sommet peut être associé à plusieurs jointures par des poids différents.\newline
+Celle utilisée majoritairement est d'associer les sommet du modèle aux jointures. 
+Cette association peut être dure : un sommet est associé à une seule jointure, ou floue : un sommet peut être associé à plusieurs jointures par des poids différents.\newline
 
 Un algorithme permettant cette association est "bone heat weighting". \cite{baran2007automatic}
 Il permet de trouver les poids adaptés à l'association entre les os de l'armature et les sommets. Pour rendre un résultat proche du réel, on souhaite que les poids possède certaines propriétés : \\
@@ -213,8 +214,10 @@ Il permet de trouver les poids adaptés à l'association entre les os de l'armat
 \end{itemize}
 
 Un modèle qui a fait l'objet de cet algorithme peut être \og animé \fg  de façon réaliste.
-Pour cela, on peut créer des contraintes sur les mouvements possibles de l'armature pour correspondre à des actions possibles. 
-Par exemple, pour la main, les doigts ne peuvent pas bouger librement, on peut donc contraindre les degrés de liberté de chaque jointure et même empêcher les translations : toutes les positions de la main pouvant être exprimées par une série de rotation contraintes des jointures du squelette.\newline
+Pour cela, on peut créer des contraintes sur les mouvements possibles de l'armature pour correspondre à des actions possibles.\newline
+Par exemple, pour la main, les doigts ne peuvent pas bouger librement. 
+On peut donc contraindre les degrés de liberté de chaque jointure et même empêcher les translations. 
+Toutes les positions de la main pouvant être exprimées par une série de rotation contraintes au niveau des jointures du squelette.\newline
 
 
 % ATTENTION : à changer si modification de la méthode d'animation
