Ajout de SchémaRotationDoigt.jpg et inclusion dans le document realisation.tex

--- a/edla/realisation.tex
+++ b/edla/realisation.tex
@@ -116,7 +116,7 @@ Les vecteurs sont formés par les points suivants : la jointure qui sert de pivo
 
 \begin{figure}[!h]
  \centering
- 
+ \includegraphics[width=0.7\textwidth]{images/SchémaRotationDoigt.jpeg}
  \caption{Schéma d'explication du calcul de l'angle}
 \end{figure}
 
