Ajout d'une partie sur l'animation par clef dans solution.tex.
Ajout de TODOs dans plusieurs fichiers

--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -41,6 +41,7 @@ Les variations de luminosité sont courantes, la méthode doit être robuste
 manière interactive.\\
 
 % plan
+%TODO Modifier
 Dans un premier temps, nous décrivons notre projet, afin de comprendre 
 précisément le problème et les enjeux liés à celui-ci. Ensuite, nous 
 réalisons un état de l'art ainsi qu'un prévisionnel afin de déterminer 
