--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -54,6 +54,7 @@ propose également une licence gratuite assez complète.\\
   \end{center}
 \end{figure}
 
+%TODO Modifier la partie sur la modélisation 3D
 Dans le cadre de ce projet, nous sommes amenés à rédiger un état de
 l'art. Cette première partie nous permet de synthétiser et sélectionner 
 les solutions. Notre objectif étant de détecter la main d'une personne 
