--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -187,10 +187,10 @@ provenant de l'image de profondeur. La fonction $\rho(e)$, quant à elle, est é
 \section{Animation de la main}
 	
 %Blender
-Pour pouvoir animer une main de façon cohérente et réaliste il existe plusieurs solutions. 
-Cependant, dans le cadre d'une animation en temps réel et contrôlé par la main de l'utilisateur, des solutions comme l'animation par clef sont à abandonner.
+Pour pouvoir animer une main de façon cohérente et réaliste, il existe plusieurs solutions. 
+Cependant, dans le cadre d'une animation en temps réel et contrôlé par la main de l'utilisateur, des animations pré-calculées et maitrisées entièrement par l'animateur sont à abandonner.
 
-Nous avons choisi de nous concentrer sur une animation à base d'armature.\newline
+L'animation fine et la déformation de modèles 3D nécessite, le plus souvent, une armature.\newline
 
 \begin{figure}[!h]
 	\centering
@@ -200,28 +200,30 @@ Nous avons choisi de nous concentrer sur une animation à base d'armature.\newli
 
 Les armatures permettent de modifier le modèle associé à partir de rotations et translations des jointures de cet armature.
 Il existe de nombreuses méthodes pour réaliser cette modification.
-Celle utilisée majoritairement est d'associer les sommet du modèle aux jointures. 
+Celle utilisée majoritairement est d'associer les sommets du modèle aux jointures. 
 Cette association peut être dure : un sommet est associé à une seule jointure, ou floue : un sommet peut être associé à plusieurs jointures par des poids différents.\newline
 
-Un algorithme permettant cette association est "bone heat weighting". \cite{baran2007automatic}
+Un algorithme permettant cette association floue est "bone heat weighting". \cite{baran2007automatic}
 Il permet de trouver les poids adaptés à l'association entre les os de l'armature et les sommets. Pour rendre un résultat proche du réel, on souhaite que les poids possède certaines propriétés : \\
 \begin{itemize}
 	\item Ils devraient être indépendants de la résolution du mesh, un sommet situé à un endroit du mesh devrait avoir le même poids quel
-	que soit le nombre de sommet proches.
-	\item Ils devraient varier de façon homogène avec la surface. Les valeurs de poids ne devraient pas varier fortement si la surface est lisse et inversement si elle est inégale.
+	que soit le nombre de sommets proches.
+	\item Ils devraient varier de façon homogène avec la surface. Les valeurs de poids ne devraient pas varier fortement si la surface est lisse mais, inversement, si elle est inégale, les valeurs devraient varier plus.
 	\item Pour éviter des artefacts liés aux plis du modèle, il doit y avoir un rapport de proportionnalité entre la largeur des jointures 
-	et la distance de la jointure au modèle. 
+	et la distance entre la jointure et le modèle. 
 \end{itemize}
 
-Un modèle qui a fait l'objet de cet algorithme peut être \og animé \fg  de façon réaliste.
+Un modèle dont les sommets on été associés à l'armature à l'aide de cet algorithme peut être \og animé \fg  de façon réaliste.
 Pour cela, on peut créer des contraintes sur les mouvements possibles de l'armature pour correspondre à des actions possibles.\newline
 Par exemple, pour la main, les doigts ne peuvent pas bouger librement. 
 On peut donc contraindre les degrés de liberté de chaque jointure et même empêcher les translations. 
 Toutes les positions de la main pouvant être exprimées par une série de rotation contraintes au niveau des jointures du squelette.\newline
 
+%Expliquation d'animation par Key Frame
+L'animation par clef permet de créer des animations fluides à partir de, au minimum, deux \og Key Frames \fg. L'animation est réalisée en calculant la position, l'orientation et la posture de l'objet animé pour chaque images entre deux \og Key Frame \fg. La technique utilisée le plus fréquemment est l'interpolation linéaire. Cette méthode est rapide comparée à d'autres techniques d'animation, cela permet d'assurer le temps réel. Dans le cadre de notre projet, l'utilisateur étant celui qui contrôle l'animation du modèle, les \og Keyframes \fg seraient récupérées par l'outils de capture utilisé.
 
 % ATTENTION : à changer si modification de la méthode d'animation
-Une autre solution, celle employée dans notre projet, consiste à n'utiliser que des informations de position obtenue par détection des articulations des doigts de la main \textit{via} un périphérique de capture.
+Une autre solution consiste à n'utiliser que des informations de position obtenue par détection des articulations des doigts de la main \textit{via} un périphérique de capture.
 Dans cette méthode, on associe les points détectés aux jointures de l'armature. Les positions des jointures du modèle sont donc naturellement contraintes par les postions des articulations de la véritable main.\newline
 
 Enfin, il existe une méthode appelée la cinématique inverse qui utilise un point fixe et un point mobile de l'armature. Elle permet de retrouver les rotations effectuées par les jointures pour que le point mobile soit à sa position connue. Pour cela, l'algorithme de cinématique inverse minimise la fonction de distance entre le point mobile de l'armature et la position que ce point doit atteindre.
