--- a/edla/solution.tex
+++ b/edla/solution.tex
@@ -189,7 +189,6 @@ provenant de l'image de profondeur. La fonction $\rho(e)$, quant à elle, est é
 %Blender
 Pour pouvoir animer une main de façon cohérente et réaliste il existe plusieurs solutions. 
 Cependant, dans le cadre d'une animation en temps réel et contrôlé par la main de l'utilisateur, des solutions comme l'animation par clef sont à abandonner.
-
 Nous avons choisi de nous concentrer sur une animation à base d'armature.\newline
 
 \begin{figure}[!h]
@@ -202,7 +201,7 @@ Les armatures permettent de modifier le modèle associé à partir de rotations 
 Il existe de nombreuses méthodes pour réaliser cette modification.
 Celle utilisée majoritairement est d'associer les sommet du modèle aux jointures. Cette association peut être dure : un sommet est associé à une seule jointure, ou floue : un sommet peut être associé à plusieurs jointures par des poids différents.\newline
 
-Un algorithme permettant cette association est "bone heat weighting". \cite{baran2007automatic}
+Un algorithme permettant cette association est "bone heat weighting"\cite{baran2007automatic}.
 Il permet de trouver les poids adaptés à l'association entre les os de l'armature et les sommets. Pour rendre un résultat proche du réel, on souhaite que les poids possède certaines propriétés : \\
 \begin{itemize}
 	\item Ils devraient être indépendants de la résolution du mesh, un sommet situé à un endroit du mesh devrait avoir le même poids quel
@@ -212,11 +211,11 @@ Il permet de trouver les poids adaptés à l'association entre les os de l'armat
 	et la distance de la jointure au modèle. 
 \end{itemize}
 
-Un modèle qui a fait l'objet de cet algorithme peut être \og animé \fg  de façon réaliste.
+Un modèle qui a fait l'objet de cet algorithme peut être \og animé \fg de façon réaliste.
 Pour cela, on peut créer des contraintes sur les mouvements possibles de l'armature pour correspondre à des actions possibles. 
 Par exemple, pour la main, les doigts ne peuvent pas bouger librement, on peut donc contraindre les degrés de liberté de chaque jointure et même empêcher les translations : toutes les positions de la main pouvant être exprimées par une série de rotation contraintes des jointures du squelette.\newline
 
-
+%TODO on ne doit pas dire qu'on utilise sa dans notre etat de l'art vu que celui-ci est faire avant
 % ATTENTION : à changer si modification de la méthode d'animation
 Une autre solution, celle employée dans notre projet, consiste à n'utiliser que des informations de position obtenue par détection des articulations des doigts de la main \textit{via} un périphérique de capture.
 Dans cette méthode, on associe les points détectés aux jointures de l'armature. Les positions des jointures du modèle sont donc naturellement contraintes par les postions des articulations de la véritable main.\newline
